# ExSO

./: README.md  WARP.md  pyproject.toml  requirements.txt  run_web.py  upload_to_pypi.py
exso_sdk/model_data/: exoplanet_model.pth
model/v2/: exo_label_encoder.pkl
tests/: demo_pypi_package.py  example_usage.py  model_import.py  run_tests.py
tests/sampel/: cleaned_koi.csv
web/: QUICKSTART.md  README.md  app.py  pyproject.toml  run.py  test_app.py
web/sample_data/: sample_exoplanets.csv  training_data.csv
web/static/css/: style.css
web/static/js/: app.js
web/templates/: index.html
