[project]
name = "web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "exso-sdk==2.1.11",
    "flask==2.3.3",
    "flask-cors==4.0.0",
    "numpy==1.24.3",
    "openpyxl==3.1.2",
    "pandas==2.0.3",
    "werkzeug==2.3.7",
]

[tool.uv.sources]
exso-sdk = { workspace = true }
